--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,14 +15,14 @@ jobs:
 
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
-
+        uses: actions/checkout@v3
+        
       - name: Build with Buildozer
         uses: ArtemSBulgakov/buildozer-action@v1
         id: buildozer
         with:
           workdir: .  # Если ваши файлы находятся в корне репозитория
-          buildozer_version: stable
+          buildozer_version: "2023.09.03"
 
       - name: Upload APK artifact
         uses: actions/upload-artifact@v4
