--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,46 +1,44 @@
-name: CI
+name: Build APK
+
 on:
   push:
-    branches: [ main ]
+    branches:
+      - main
   pull_request:
-    branches: [ main ]
-  schedule:
-    - cron: '0 0 1,15 * *'
+    branches:
+      - main
 
 jobs:
-  build:
+  build-android:
+    name: Build for Android
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v2
+      # Шаг 1: Проверка кода из репозитория
+      - name: Checkout repository
+        uses: actions/checkout@v2
 
-      # used to cache dependencies with a timeout
-      - name: Get Date
-        id: get-date
-        run: |
-          echo "::set-output name=date::$(/bin/date -u "+%Y%m%d")"
-        shell: bash
+      # Шаг 2: (Опционально) Вывести список файлов для отладки
+      - name: List project files
+        run: ls -la
 
-      - name: Cache Buildozer global directory
-        uses: actions/cache@v2
-        with:
-          path: .buildozer_global
-          key: buildozer-global-${{ hashFiles('buildozer.spec') }} # Replace with your path
-
-      - uses: actions/cache@v2
-        with:
-          path: .buildozer
-          key: ${{ runner.os }}-${{ steps.get-date.outputs.date }}-${{ hashFiles('buildozer.spec') }}
-
+      # Шаг 3: Запуск сборки APK с помощью Buildozer Action
       - name: Build with Buildozer
         uses: ArtemSBulgakov/buildozer-action@v1
         id: buildozer
         with:
-          command: buildozer android debug
-          buildozer_version: master
+          workdir: .        # Если файлы проекта лежат в корне
+          buildozer_version: stable
+          # Если нужно, можно указать конкретную версию, например "2023.09.03"
 
-      - name: Upload artifacts
-        uses: actions/upload-artifact@v2
+      # Шаг 4: Проверка наличия APK (для отладки)
+      - name: Check APK output
+        run: ls -la bin/
+
+      # Шаг 5: Загрузка APK как артефакт
+      - name: Upload APK artifact
+        uses: actions/upload-artifact@v4
         with:
-          name: package
-          path: ${{ steps.buildozer.outputs.filename }}
+          name: apk-package
+          # Путь к APK. Если ваш buildozer.spec настроен стандартно, APK будет в папке bin.
+          path: bin/*.apk
