--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,7 +28,7 @@ jobs:
         id: buildozer
         with:
           workdir: .        # Если файлы проекта лежат в корне
-          buildozer_version: stable
+          buildozer_version: "2022.08.01"
           # Если нужно, можно указать конкретную версию, например "2023.09.03"
 
       # Шаг 4: Проверка наличия APK (для отладки)
