--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,7 +20,7 @@ jobs:
 
       - name: Pull Buildozer Docker image
         run: |
-          IMAGE_TAG="stable"  # Задаём конкретный тег вместо latest
+          IMAGE_TAG="2022.08.01"  # Задаём конкретный тег вместо latest
           echo "Pulling image: kivy/buildozer:${IMAGE_TAG}"
           docker pull kivy/buildozer:${IMAGE_TAG}
 
