--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,18 +18,10 @@ jobs:
         with:
           python-version: 3.11
 
-      - name: Pull Buildozer Docker image
-        run: |
-          IMAGE_TAG="latest"  # Задаём конкретный тег вместо latest
-          echo "Pulling image: kivy/buildozer:${IMAGE_TAG}"
-          docker pull ghcr.io/kivy/buildozer:${IMAGE_TAG}
-
       - name: Build APK with Buildozer via Docker
         run: |
-          export DOCKER_BUILDKIT=0
-          IMAGE_TAG="latest"
-          echo "Running Buildozer build using image: kivy/buildozer:${IMAGE_TAG}"
-          docker run --rm -v "${{ github.workspace }}":/home/user/hostcwd kivy/buildozer:${IMAGE_TAG} buildozer -v android debug
+          echo "Running Buildozer build using image: homdx/buildozer:latest"
+          docker run --rm -v "${{ github.workspace }}":/home/user/hostcwd homdx/buildozer:latest buildozer -v android debug
 
       - name: List APK output
         run: ls -la bin/
