--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,33 +1,42 @@
-name: Build APK
-
+name: CI
 on:
   push:
     branches: [ main ]
-  pull_request:
-    branches: [ main ]
 
 jobs:
-  build-android:
-    runs-on: ubuntu-latest
+  build:
+    runs-on: ubuntu-20.04
+
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
+uses: actions/checkout@v2
 
-      - name: Setup Python (optional)
-        uses: actions/setup-python@v4
-        with:
-          python-version: 3.11
-
-      - name: Build APK with Buildozer via Docker
+      used to cache dependencies with a timeout
+name: Get Date
+        id: get-date
         run: |
-          echo "Running Buildozer build using image: homdx/buildozer:latest"
-          docker run --rm -v "${{ github.workspace }}":/home/user/hostcwd homdx/buildozer:latest buildozer -v android debug
+          echo "::set-output name=date::$(/bin/date -u "+%Y%m%d")"
+        shell: bash
 
-      - name: List APK output
-        run: ls -la bin/
-
-      - name: Upload APK artifact
-        uses: actions/upload-artifact@v4
+name: Cache Buildozer global directory
+        uses: actions/cache@v2
         with:
-          name: apk
-          path: bin/*.apk
+          path: .buildozer_global
+          key: buildozer-global-${{ hashFiles('buildozer.spec') }} # Replace with your path
+
+uses: actions/cache@v2
+        with:
+          path: .buildozer
+          key: ${{ runner.os }}-${{ steps.get-date.outputs.date }}-${{ hashFiles('buildozer.spec') }}
+
+name: Build with Buildozer
+        uses: ArtemSBulgakov/buildozer-action@v1
+        id: buildozer
+        with:
+          command: buildozer android debug
+          buildozer_version: stable
+
+name: Upload artifacts
+        uses: actions/upload-artifact@v2
+        with:
+          name: package
+          path: ${{ steps.buildozer.outputs.filename }}
