--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,35 +10,20 @@ jobs:
       - name: Install build dependencies
         run: |
           sudo apt-get update
-          sudo apt-get install -y \
-            git \
-            zip \
-            unzip \
-            openjdk-17-jdk \
-            autoconf \
-            libtool \
-            pkg-config \
-            zlib1g-dev \
-            libncurses5-dev \
-            libncursesw5-dev \
-            libtinfo5 \
-            cmake \
-            libffi-dev \
-            libssl-dev \
-            android-sdk
+          sudo apt-get install -y libncurses6 libncurses-dev libtinfo-dev android-sdk-platform-tools
       - name: Set up Python 3.8
         uses: actions/setup-python@v5
         with:
           python-version: 3.8
-      - name: Install Buildozer
-        run: |
-          python3 -m pip install --user --upgrade buildozer
-      - name: Initialize Buildozer
-        run: |
-          buildozer init
+      - name: Set up Java 17
+        uses: actions/setup-java@v4
+        with:
+          java-version: 17
       - name: Build APK
-        run: |
-          buildozer android debug
+        uses: digreatbrian/buildozer-action@v2
+        with:
+          python-version: 3.8
+          buildozer-cmd: buildozer -v android debug
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
         with:
