--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,15 +10,16 @@ jobs:
       - name: Install build dependencies
         run: |
           sudo apt-get update
-          sudo apt-get install -y libncurses6 libncurses-dev libtinfo-dev android-sdk-platform-tools
+          sudo apt-get install -y libncurses6 libncurses-dev libtinfo-dev
       - name: Set up Python 3.8
         uses: actions/setup-python@v5
         with:
           python-version: 3.8
-      - name: Set up Java 17
+      - name: Set up JDK 17
         uses: actions/setup-java@v4
         with:
-          java-version: 17
+          distribution: 'temurin'
+          java-version: '17'
       - name: Build APK
         uses: digreatbrian/buildozer-action@v2
         with:
