--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,32 +1,63 @@
+name: Build APK
+
 on:
   push:
-    branches: [ main ]
+    branches:
+      - main  # или другая ветка, на которую вы хотите реагировать
+  pull_request:
+    branches:
+      - main  # или другая ветка, на которую вы хотите реагировать
 
 jobs:
   build:
     runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@v4
-      - name: Install build dependencies
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y libncurses6 libncurses-dev libtinfo-dev
-      - name: Set up Python 3.8
-        uses: actions/setup-python@v5
-        with:
-          python-version: 3.8
-      - name: Set up Java 17
-        uses: actions/setup-java@v4
-        with:
-          java-version: 17
-          java-package: jdk
-      - name: Build APK
-        uses: digreatbrian/buildozer-action@v2
-        with:
-          python-version: 3.8
-          buildozer-cmd: buildozer -v android debug
-      - name: Upload artifacts
-        uses: actions/upload-artifact@v4
-        with:
-          name: package
-          path: ./bin/*.apk
+    - name: Checkout code
+      uses: actions/checkout@v2
+
+    - name: Set up Python
+      uses: actions/setup-python@v2
+      with:
+        python-version: '3.8'  # Укажите нужную версию Python
+
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install kivy
+        pip install buildozer
+
+    - name: Install additional dependencies for Buildozer
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y \
+          openjdk-8-jdk \
+          python3-pip \
+          python3-setuptools \
+          python3-wheel \
+          git \
+          zip \
+          unzip \
+          zlib1g-dev \
+          libncurses5-dev \
+          libstdc++6 \
+          libffi-dev \
+          libssl-dev \
+          libsqlite3-dev \
+          libgdbm-dev \
+          libbz2-dev \
+          libreadline-dev \
+          liblzma-dev \
+          libjpeg-dev \
+          libfreetype6-dev \
+          libpng-dev
+
+    - name: Build APK
+      run: |
+        buildozer -v android debug  # или другой нужный вам режим сборки
+
+    - name: Upload APK
+      uses: actions/upload-artifact@v2
+      with:
+        name: myapp-debug.apk
+        path: bin/myapp-*.apk  # Убедитесь, что путь соответствует вашему APK
