--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,13 +8,22 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      # Установка зависимостей для сборки
+      # Скачиваем и устанавливаем libtinfo5 вручную
+      - name: Install libtinfo5 manually
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y wget
+          wget http://security.ubuntu.com/ubuntu/pool/universe/n/ncurses/libtinfo5_6.3-2ubuntu0.1_amd64.deb
+          sudo dpkg -i libtinfo5_6.3-2ubuntu0.1_amd64.deb || true
+          sudo apt-get install -f -y
+
+      # Устанавливаем остальные зависимости для сборки
       - name: Install build dependencies
         run: |
           sudo apt-get update
-          sudo apt-get install -y libtinfo5 libncurses6 libncurses-dev libtinfo-dev
+          sudo apt-get install -y libncurses6 libncurses-dev libtinfo-dev android-sdk-platform-tools
 
-      # Настройка Java 17
+      # Настройка Java (с обязательным параметром distribution)
       - name: Set up Java 17
         uses: actions/setup-java@v4
         with:
@@ -33,7 +42,7 @@ jobs:
         with:
           python-version: 3.8
 
-      # Сборка APK с использованием Buildozer
+      # Сборка APK с помощью Buildozer
       - name: Build APK
         uses: digreatbrian/buildozer-action@v2
         with:
@@ -42,7 +51,7 @@ jobs:
             yes | sdkmanager --licenses
             buildozer -v android debug
 
-      # Загрузка артефактов
+      # Загрузка собранных артефактов
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
         with:
