--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,7 +8,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      # Устанавливаем libtinfo5 вручную
+      # Устанавливаем libtinfo5 вручную (так как его нет в репозиториях Ubuntu 24.04)
       - name: Install libtinfo5 manually
         run: |
           sudo apt-get update
@@ -21,10 +21,9 @@ jobs:
       - name: Install build dependencies
         run: |
           sudo apt-get update
-          sudo apt-get install -y libncurses6 libncurses-dev libtinfo-dev
-          sudo apt-get install -y android-sdk-platform-tools
+          sudo apt-get install -y libncurses6 libncurses-dev libtinfo-dev android-sdk-platform-tools
 
-      # Настройка Java 17
+      # Настройка Java 17 с обязательным параметром distribution
       - name: Set up Java 17
         uses: actions/setup-java@v4
         with:
@@ -58,13 +57,13 @@ jobs:
       - name: Add Android SDK to PATH
         run: echo "$HOME/android-sdk/cmdline-tools/latest/bin" >> $GITHUB_PATH
 
-      # Сборка APK с помощью Buildozer
+      # Сборка APK с помощью Buildozer; команда sdkmanager теперь игнорирует ошибку Broken pipe
       - name: Build APK
         uses: digreatbrian/buildozer-action@v2
         with:
           python-version: 3.8
           buildozer-cmd: |
-            yes | sdkmanager --licenses
+            yes | sdkmanager --licenses || true
             buildozer -v android debug
 
       # Загрузка собранных артефактов
