--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,7 +23,7 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y libncurses6 libncurses-dev libtinfo-dev
 
-      # Настройка Java 17 с обязательным параметром distribution
+      # Настройка Java 17 (с обязательным параметром distribution)
       - name: Set up Java 17
         uses: actions/setup-java@v4
         with:
@@ -57,21 +57,28 @@ jobs:
       - name: Add Android SDK to PATH
         run: echo "$HOME/android-sdk/cmdline-tools/latest/bin" >> $GITHUB_PATH
 
-      # Сборка APK с помощью Buildozer:
-      # 1. Принимаем лицензии Android SDK (игнорируем ошибку Broken pipe)
-      # 2. Принудительно устанавливаем build-tools версии 33.0.0, чтобы избежать проблемы с лицензией Build-Tools 36
+      # Устанавливаем build-tools версии 33.0.0 и принимаем лицензии
+      - name: Install Android Build-Tools
+        run: |
+          yes | $HOME/android-sdk/cmdline-tools/latest/bin/sdkmanager --licenses || true
+          $HOME/android-sdk/cmdline-tools/latest/bin/sdkmanager "build-tools;33.0.0"
+        env:
+          ANDROID_SDK_ROOT: $HOME/android-sdk
+
+      # Создаем символьную ссылку, чтобы Buildozer нашел Android SDK и build-tools (aidl)
+      - name: Link Android SDK for Buildozer
+        run: |
+          mkdir -p $HOME/.buildozer/android/platform
+          ln -s $HOME/android-sdk $HOME/.buildozer/android/platform/android-sdk
+
+      # Сборка APK с помощью Buildozer
       - name: Build APK
         uses: digreatbrian/buildozer-action@v2
         with:
           python-version: 3.8
-          buildozer-cmd: |
-            yes | sdkmanager --licenses || true
-            sdkmanager "build-tools;33.0.0" || true
-            buildozer -v android debug
+          buildozer-cmd: buildozer -v android debug
+        env:
+          ANDROID_SDK_ROOT: $HOME/android-sdk
+          ANDROID_HOME: $HOME/android-sdk
 
-      # Загрузка собранного APK
-      - name: Upload artifacts
-        uses: actions/upload-artifact@v4
-        with:
-          name: package
-          path: ./bin/*.apk
+      # Загрузка собранного 
