--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,84 +1,52 @@
+name: Build APK
+
 on:
   push:
-    branches: [ main ]
+    branches:
+      - main
+  pull_request:
+    branches:
+      - main
 
 jobs:
   build:
     runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout repository
+        uses: actions/checkout@v2
 
-      # Устанавливаем libtinfo5 вручную (так как его нет в репозиториях Ubuntu 24.04)
-      - name: Install libtinfo5 manually
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y wget
-          wget http://security.ubuntu.com/ubuntu/pool/universe/n/ncurses/libtinfo5_6.3-2ubuntu0.1_amd64.deb
-          sudo dpkg -i libtinfo5_6.3-2ubuntu0.1_amd64.deb || true
-          sudo apt-get install -f -y
-
-      # Устанавливаем остальные зависимости
-      - name: Install build dependencies
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y libncurses6 libncurses-dev libtinfo-dev
-
-      # Настройка Java 17 (с обязательным параметром distribution)
-      - name: Set up Java 17
-        uses: actions/setup-java@v4
+      - name: Set up Python
+        uses: actions/setup-python@v2
         with:
-          distribution: 'temurin'
-          java-version: '17'
-          java-package: jdk
-          check-latest: false
-          server-id: github
-          server-username: ${{ github.actor }}
-          server-password: ${{ secrets.GITHUB_TOKEN }}
-          overwrite-settings: true
+          python-version: '3.8'
 
-      # Настройка Python 3.8
-      - name: Set up Python 3.8
-        uses: actions/setup-python@v5
-        with:
-          python-version: 3.8
-
-      # Скачиваем и устанавливаем Android Command-line Tools
-      - name: Install Android Command-line Tools
+      - name: Install dependencies
         run: |
-          mkdir -p $HOME/android-sdk/cmdline-tools
-          cd $HOME/android-sdk/cmdline-tools
+          python -m pip install --upgrade pip
+          pip install buildozer cython
+
+      - name: Set up Android SDK
+        run: |
+          mkdir -p $HOME/.buildozer/android/platform/android-sdk/cmdline-tools
+          cd $HOME/.buildozer/android/platform/android-sdk/cmdline-tools
           wget https://dl.google.com/android/repository/commandlinetools-linux-8512546_latest.zip
           unzip commandlinetools-linux-8512546_latest.zip
           mv cmdline-tools latest
-        env:
-          ANDROID_SDK_ROOT: $HOME/android-sdk
+          export ANDROID_SDK_ROOT=$HOME/.buildozer/android/platform/android-sdk
+          export PATH=$ANDROID_SDK_ROOT/cmdline-tools/latest/bin:$PATH
+          yes | sdkmanager --licenses
+          sdkmanager "platform-tools" "platforms;android-29" "build-tools;29.0.3"
 
-      # Добавляем Android SDK инструменты в PATH
-      - name: Add Android SDK to PATH
-        run: echo "$HOME/android-sdk/cmdline-tools/latest/bin" >> $GITHUB_PATH
-
-      # Устанавливаем build-tools версии 33.0.0 и принимаем лицензии
-      - name: Install Android Build-Tools
-        run: |
-          yes | $HOME/android-sdk/cmdline-tools/latest/bin/sdkmanager --licenses || true
-          $HOME/android-sdk/cmdline-tools/latest/bin/sdkmanager "build-tools;33.0.0"
-        env:
-          ANDROID_SDK_ROOT: $HOME/android-sdk
-
-      # Создаем символьную ссылку, чтобы Buildozer нашел Android SDK и build-tools (aidl)
-      - name: Link Android SDK for Buildozer
-        run: |
-          mkdir -p $HOME/.buildozer/android/platform
-          ln -s $HOME/android-sdk $HOME/.buildozer/android/platform/android-sdk
-
-      # Сборка APK с помощью Buildozer
       - name: Build APK
-        uses: digreatbrian/buildozer-action@v2
-        with:
-          python-version: 3.8
-          buildozer-cmd: buildozer -v android debug
+        run: |
+          export ANDROID_SDK_ROOT=$HOME/.buildozer/android/platform/android-sdk
+          buildozer android debug
         env:
-          ANDROID_SDK_ROOT: $HOME/android-sdk
-          ANDROID_HOME: $HOME/android-sdk
+          ANDROID_SDK_ROOT: $HOME/.buildozer/android/platform/android-sdk
 
-      # Загрузка собранного 
+      - name: Upload APK
+        uses: actions/upload-artifact@v2
+        with:
+          name: MyApp-APK
+          path: bin/*.apk
