--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,11 +28,17 @@ jobs:
 
       - name: Set up Android SDK
         run: |
+          # Создаем директорию для commandline tools
           mkdir -p $HOME/.buildozer/android/platform/android-sdk/cmdline-tools/latest
           cd $HOME/.buildozer/android/platform/android-sdk/cmdline-tools/latest
+          # Загружаем архив с инструментами
           wget https://dl.google.com/android/repository/commandlinetools-linux-8512546_latest.zip
           unzip commandlinetools-linux-8512546_latest.zip
+          # Перемещаем содержимое распакованной папки на уровень выше
+          mv cmdline-tools/* .
+          rm -rf cmdline-tools
           rm commandlinetools-linux-8512546_latest.zip
+          # Указываем переменные окружения и обновляем PATH
           export ANDROID_SDK_ROOT=$HOME/.buildozer/android/platform/android-sdk
           export PATH=$ANDROID_SDK_ROOT/cmdline-tools/latest/bin:$ANDROID_SDK_ROOT/platform-tools:$PATH
           yes | sdkmanager --licenses
