--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,7 +28,7 @@ jobs:
 
       - name: Set up Android SDK and NDK
         run: |
-          # Используем JDK 8 для совместимости с sdkmanager
+          # Используем JDK 8 для совместимости с sdkmanager и python-for-android
           export JAVA_HOME=/usr/lib/jvm/temurin-8-jdk-amd64
           export ANDROID_SDK_ROOT=$HOME/.buildozer/android/platform/android-sdk
           mkdir -p $ANDROID_SDK_ROOT
@@ -38,28 +38,31 @@ jobs:
           cd $ANDROID_SDK_ROOT/cmdline-tools/latest
           wget https://dl.google.com/android/repository/commandlinetools-linux-8512546_latest.zip
           unzip commandlinetools-linux-8512546_latest.zip
-          # Перемещаем содержимое распакованной папки на уровень выше
           mv cmdline-tools/* .
           rm -rf cmdline-tools
           rm commandlinetools-linux-8512546_latest.zip
           
-          # Для совместимости с buildozer копируем инструменты в структуру tools
+          # Копируем инструменты в структуру, которую ожидает buildozer
           mkdir -p $ANDROID_SDK_ROOT/tools
           cp -r $ANDROID_SDK_ROOT/cmdline-tools/latest/* $ANDROID_SDK_ROOT/tools/
           
           # Обновляем PATH
           export PATH=$ANDROID_SDK_ROOT/cmdline-tools/latest/bin:$ANDROID_SDK_ROOT/platform-tools:$ANDROID_SDK_ROOT/tools/bin:$PATH
           
-          # Принимаем лицензии и устанавливаем необходимые компоненты, включая совместимый NDK
+          # Принимаем лицензии и устанавливаем необходимые компоненты, включая нужный NDK
           yes | sdkmanager --licenses
           sdkmanager --install "platform-tools" "platforms;android-29" "build-tools;29.0.3" "cmdline-tools;latest" "ndk;21.4.7075529"
 
       - name: Build APK
         run: |
-          # Используем JDK 8 и указываем путь к совместимому NDK
+          # Используем JDK 8 для сборки
           export JAVA_HOME=/usr/lib/jvm/temurin-8-jdk-amd64
           export ANDROID_SDK_ROOT=$HOME/.buildozer/android/platform/android-sdk
+          # Принудительно указываем нужную версию NDK
           export ANDROID_NDK_HOME=$ANDROID_SDK_ROOT/ndk/21.4.7075529
+          export ANDROID_NDK=$ANDROID_NDK_HOME
+          # Убираем потенциально конфликтующую переменную
+          unset ANDROIDNDK
           buildozer android debug
         env:
           ANDROID_SDK_ROOT: $HOME/.buildozer/android/platform/android-sdk
