--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -53,24 +53,26 @@ jobs:
           yes | sdkmanager --licenses
           sdkmanager --install "platform-tools" "platforms;android-29" "build-tools;29.0.3" "cmdline-tools;latest" "ndk;21.4.7075529"
 
+      - name: Remove conflicting default NDK
+        run: |
+          # Удаляем/отключаем установленный по умолчанию ndk (например, ndk-r25b), который может мешать
+          rm -rf $HOME/.buildozer/android/platform/android-ndk-r25b
+          unset ANDROIDNDK
+
       - name: Build APK
         env:
           JAVA_HOME: /usr/lib/jvm/temurin-8-jdk-amd64
           ANDROID_SDK_ROOT: ${{ env.HOME }}/.buildozer/android/platform/android-sdk
           ANDROID_NDK_HOME: ${{ env.HOME }}/.buildozer/android/platform/android-sdk/ndk/21.4.7075529
           ANDROID_NDK: ${{ env.HOME }}/.buildozer/android/platform/android-sdk/ndk/21.4.7075529
-          ANDROIDNDK: ${{ env.HOME }}/.buildozer/android/platform/android-sdk/ndk/21.4.7075529
         run: |
-          # Сбрасываем переменные, которые могут конфликтовать с нашими настройками
-          unset ANDROID_NDK_ROOT
-          unset ANDROID_NDK_LATEST_HOME
-          unset ANDROIDNDK
-          # Задаём нужные переменные для NDK
+          # Сбрасываем конфликтующие переменные и задаём нужные для NDK версии 21.4.7075529
           export JAVA_HOME=/usr/lib/jvm/temurin-8-jdk-amd64
           export ANDROID_SDK_ROOT=$HOME/.buildozer/android/platform/android-sdk
+          rm -rf $HOME/.buildozer/android/platform/android-ndk-r25b
+          unset ANDROIDNDK
           export ANDROID_NDK_HOME=$ANDROID_SDK_ROOT/ndk/21.4.7075529
           export ANDROID_NDK=$ANDROID_NDK_HOME
-          export ANDROIDNDK=$ANDROID_NDK_HOME
           buildozer android debug
 
       - name: Upload APK
