--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,30 +32,30 @@ jobs:
           export JAVA_HOME=/usr/lib/jvm/temurin-8-jdk-amd64
           export ANDROID_SDK_ROOT=$HOME/.buildozer/android/platform/android-sdk
           mkdir -p $ANDROID_SDK_ROOT
-          
-          # Устанавливаем commandline-tools
+
+          # Устанавливаем commandline-tools в $ANDROID_SDK_ROOT/cmdline-tools/latest
           mkdir -p $ANDROID_SDK_ROOT/cmdline-tools/latest
           cd $ANDROID_SDK_ROOT/cmdline-tools/latest
           wget https://dl.google.com/android/repository/commandlinetools-linux-8512546_latest.zip
           unzip commandlinetools-linux-8512546_latest.zip
+          # Перемещаем содержимое распакованной папки (обычно "cmdline-tools") в текущую директорию
           mv cmdline-tools/* .
           rm -rf cmdline-tools
           rm commandlinetools-linux-8512546_latest.zip
-          
-          # Копируем инструменты в структуру, которую ожидает buildozer (для корректной работы sdkmanager)
-          mkdir -p $ANDROID_SDK_ROOT/tools
-          cp -r $ANDROID_SDK_ROOT/cmdline-tools/latest/* $ANDROID_SDK_ROOT/tools/
-          
-          # Обновляем PATH для доступа к Android SDK
-          export PATH=$ANDROID_SDK_ROOT/cmdline-tools/latest/bin:$ANDROID_SDK_ROOT/platform-tools:$ANDROID_SDK_ROOT/tools/bin:$PATH
-          
-          # Принимаем лицензии и устанавливаем компоненты, включая нужный NDK (версия 21.4.7075529)
+
+          # Перемещаем распакованные инструменты в директорию tools, которую ожидает Buildozer
+          rm -rf $ANDROID_SDK_ROOT/tools
+          mv $ANDROID_SDK_ROOT/cmdline-tools/latest $ANDROID_SDK_ROOT/tools
+
+          # Обновляем PATH для доступа к sdkmanager и другим утилитам
+          export PATH=$ANDROID_SDK_ROOT/tools/bin:$ANDROID_SDK_ROOT/platform-tools:$PATH
+
+          # Принимаем лицензии и устанавливаем необходимые компоненты
           yes | sdkmanager --licenses
-          sdkmanager --install "platform-tools" "platforms;android-29" "build-tools;29.0.3" "cmdline-tools;latest" "ndk;21.4.7075529"
+          sdkmanager --install "platform-tools" "platforms;android-29" "build-tools;29.0.3" "ndk;21.4.7075529"
 
       - name: Remove conflicting default NDK
         run: |
-          # Удаляем/отключаем установленный по умолчанию ndk (например, ndk-r25b), который может мешать
           rm -rf $HOME/.buildozer/android/platform/android-ndk-r25b
           unset ANDROIDNDK
 
@@ -66,7 +66,6 @@ jobs:
           ANDROID_NDK_HOME: ${{ env.HOME }}/.buildozer/android/platform/android-sdk/ndk/21.4.7075529
           ANDROID_NDK: ${{ env.HOME }}/.buildozer/android/platform/android-sdk/ndk/21.4.7075529
         run: |
-          # Сбрасываем конфликтующие переменные и задаём нужные для NDK версии 21.4.7075529
           export JAVA_HOME=/usr/lib/jvm/temurin-8-jdk-amd64
           export ANDROID_SDK_ROOT=$HOME/.buildozer/android/platform/android-sdk
           rm -rf $HOME/.buildozer/android/platform/android-ndk-r25b
